# cafl_dev

./: .gitignore  README.md  ask_agent_demo.py  pyproject.toml  requirements.txt  runner.py
cafl/: __init__.py  backend.py  config.py  logging.py  memory.py  validation.py
cafl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cafl/eval/: __init__.py  evaluator.py  metrics.py
cafl/tools/: __init__.py  retrieval.py
cafl/utils/: config_utils.py  formatting.py  schema.py  shell.py  utils.py
envs/: eval.py  metrics.py  runner.py
envs/housing_qa/: config.json  download_housing_qa.py  eval.py
envs/housing_qa/memory/: MEMORY.md
runs/20260625_10:55:53-what-does-this-agent-do/: results.jsonl  trace.jsonl
runs/20260625_12:03:24-what-does-this-agent-do/: results.jsonl  trace.jsonl
scripts/: ask_agent_demo.py
tests/: test_backend.py  test_eval.py  test_housing_qa_eval.py  test_memory.py  test_retrieval.py  test_runner.py  test_schema.py  test_utils.py
